feat: adicionado melhorias no login e logout mongodb salvando o notificationToken e sistema mostrando se o paciente está dentro ou fora da area designada

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   maps_toolkit: ^3.0.0
   geocoding: ^3.0.0
   postgres: ^3.4.0
+  mongo_dart: ^0.10.3
 
 dev_dependencies:
   flutter_test:
